<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <!-- Toolbar -->
    <include
        android:id="@+id/app_bar"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/edit_text_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:hint="Search query term" />

    <LinearLayout
        android:id="@+id/table_row_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/edit_text_start_date"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="false"
            android:hint="Select start date" />

        <EditText
            android:id="@+id/edit_text_end_date"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:clickable="true"
            android:focusable="false"
            android:hint="Select end date" />

    </LinearLayout>

    <TableRow
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:padding="5dp">

        <CheckBox
            android:id="@+id/checkbox_arts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="Arts" />

        <CheckBox
            android:id="@+id/checkbox_politics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/politics" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:padding="5dp">

        <CheckBox
            android:id="@+id/checkbox_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/business" />

        <CheckBox
            android:id="@+id/checkbox_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/sports" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:padding="5dp">

        <CheckBox
            android:id="@+id/checkbox_entrepreneurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/entrepreneurs" />

        <CheckBox
            android:id="@+id/checkbox_travel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/travel" />
    </TableRow>

    <LinearLayout android:orientation="vertical">

        <Switch
            android:id="@+id/btn_switch_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/enable_notifications_once_per_day" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/search" />
    </LinearLayout>


</TableLayout>
